# NineEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Application/: app.cpp  app.h
Sandbox/: main.cpp  main.h
src/: Application.cpp  Application.h  NineEngine.cpp  NineEngine.h  main.cpp
src/Devices/: PhysicalDevice.cpp  PhysicalDevice.h  Window.cpp  Window.h
src/Graphics/: Window.cpp  Window.h
src/Graphics/Devices/: Window.cpp  Window.h
src/Graphics/Vulkan/: Instance.cpp  Instance.h  Renderer.cpp  Renderer.h  Vulkan.cpp  Vulkan.h  vkGlobalPool.h
src/Graphics/Vulkan/Boilerplate/: GraphicsPipeline.cpp  GraphicsPipeline.h  Surface.cpp  Surface.h  VulkanInstance.cpp  VulkanInstance.h
src/Graphics/Vulkan/Bootstrap/: Surface.h  VulkanInstance.cpp
src/Graphics/Vulkan/Core/: Buffers.cpp  Buffers.h  Device.cpp  Device.h  Instance.cpp  Instance.h  NEDevice.h  NEDisplay.h  NEInstance.cpp  NEInstance.h  NEPipeline.h  NERenderpass.h  NEShared.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  Renderpass.cpp  Renderpass.h  SharedStructs.h  Swapchain.cpp  Swapchain.h
src/Graphics/Vulkan/Core/Device/: NEDevice.cpp  NEDevice.h  NEPipeline.cpp  NEPipeline.h  NERenderpass.cpp  NERenderpass.h  NESwapchain.cpp  NESwapchain.h  NEWindow.cpp  NEWindow.h
src/Graphics/Vulkan/Core/src/: NEDevice.cpp  NEDisplay.cpp  NEInstance.cpp  NEPipeline.cpp  NERenderpass.cpp  Renderer.cpp
src/Graphics/Vulkan/Devices/: Device.cpp  Device.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h
src/Graphics/Vulkan/Extra/: Loader.cpp  Loader.h
src/Graphics/Vulkan/Helper/: Device.h  Display.h  Loader.h  Pipeline.h
src/Graphics/Vulkan/Helper/src/: Device.cpp  Display.cpp  Loader.cpp
src/Graphics/Vulkan/LeStuff/: Device.cpp  Device.h  Instance.cpp  Instance.h  Pipeline.cpp  Pipeline.h  Renderpass.cpp  Renderpass.h  Swapchain.cpp
src/Graphics/Vulkan/Pipelines/: GraphicsPipeline.cpp  GraphicsPipeline.h  RenderPass.cpp  RenderPass.h
src/Graphics/Vulkan/RenderPass/: Swapchain.cpp  Swapchain.h
src/Graphics/Vulkan/Shaders/: compile.sh  shader.frag  shader.vert
src/Graphics/Vulkan/Shaders/glsl/: compile.sh  shader.vert
src/Managers/: ComponentArray.h  ComponentManager.h  Coordinator.h  EntityManager.cpp  EntityManager.h  Shared.h  SystemManager.h
src/Managers/ECS/: Common.h  Coordinator.h  ECS.cpp  ECS.h  EntityManager.h  Shared.h  SystemManager.h
src/Managers/Engine/: Engine.cpp  Engine.h
src/Modules/Graphics/: Graphics.cpp  Graphics.h
src/Modules/Graphics/Common/: ImGuiHelpers.cpp  ImGuiHelpers.h
src/Modules/Graphics/Vulkan/: CMakeLists.txt
src/Modules/Graphics/Vulkan/include/: Common.h  Device.h  Display.h  Initializers.h  Mesh.h  Pipeline.h  Textures.h  Types.h  Vulkan.h
src/Modules/Graphics/Vulkan/shaders/: ColorShader.frag  ColorShader.vert  Example.frag  Fragment.h  Shaders.cpp  Shaders.h  TexShader.frag  TexShader.vert  TexShaderBinding.frag  Vertex.h  basic.frag  lighting.frag  mesh.vert  triangle.frag  triangle.vert
src/Modules/Graphics/Vulkan/shaders/Frag/: Color.frag  Texture.frag  TextureBinding.frag
src/Modules/Graphics/Vulkan/shaders/Vert/: Color.vert  Example.vert  Shadow.vert  Texture.vert
src/Modules/Graphics/Vulkan/src/: Common.cpp  Device.cpp  Display.cpp  Initializers.cpp  Mesh.cpp  Pipeline.cpp  Textures.cpp  Vulkan.cpp
src/Modules/IO/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
